Implementando Writer; Fazendo ajustes e melhorias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
+spring.batch.jdbc.initialize-schema=always
+
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
 spring.datasource.username=root
 spring.datasource.password=root
 
+app.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/envio_promocoes_clientes
 app.datasource.username=root
 app.datasource.password=root
 
-spring.batch.initialize-schema=always
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
