--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
 
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
